force-app/main/default/objects/Account/fields/Can_Be_Referenced__c.field-meta.xml
<CustomField>
    <fullName>Can_Be_Referenced__c</fullName>
    <description>SFDC-3103</description>
    <inlineHelpText>This field indicates if the customer has been confirmed to be willing to provide a reference or not.</inlineHelpText>
    <label>Can Be Referenced?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Willing to be referenced</fullName>
            </value>
            <value>
                <fullName>Not willing to be referenced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>