force-app/main/default/objects/Account/fields/Can_Be_Referenced_For__c.field-meta.xml
<CustomField>
    <fullName>Can_Be_Referenced_For__c</fullName>
    <description>SFDC-3103</description>
    <inlineHelpText>Indicates which type of reference a customer is willing to provide.  Multiple can be selected.</inlineHelpText>
    <label>Can Be Referenced For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales prospect reference call</fullName>
            </value>
            <value>
                <fullName>Case study</fullName>
            </value>
            <value>
                <fullName>Testimonial</fullName>
            </value>
            <value>
                <fullName>Marketing materials</fullName>
            </value>
            <value>
                <fullName>Other - reach out to GTM Systems to have options added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>