force-app/main/default/objects/Account/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <inlineHelpText>Roll-Up Summary that outputs the Close Date of the most recent Closed Won Opportunity with an Opportunity Type Bucket Name containing “Cancellation”.</inlineHelpText>
    <label>Most Recent Cancellation Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.of_Churn_MRR__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>