force-app/main/default/objects/Account/fields/CDP_Free_Trial_Contact__c.field-meta.xml
<CustomField>
    <fullName>CDP_Free_Trial_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFDC 3489 Grabs CDP Free Trial Contact</description>
    <inlineHelpText>Contact from CDP Free Trial</inlineHelpText>
    <label>CDP Free Trial Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (CDP Free Trial Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>