force-app/main/default/objects/Account/fields/CDP_Free_Trial_Lead__c.field-meta.xml
<CustomField>
    <fullName>CDP_Free_Trial_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFDC 3489 Grabs CDP Free Trial Lead</description>
    <inlineHelpText>Lead from CDP Free Trial</inlineHelpText>
    <label>CDP Free Trial Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>