force-app/main/default/objects/Account/fields/CDP_MRR__c.field-meta.xml
<CustomField>
    <fullName>CDP_MRR__c</fullName>
    <label>CDP MRR</label>
    <summarizedField>Opportunity.CDP_MRR__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>