force-app/main/default/objects/Account/fields/CDP_MRR_Attributed_to_Agency_Last_Yr__c.field-meta.xml
<CustomField>
    <fullName>CDP_MRR_Attributed_to_Agency_Last_Yr__c</fullName>
    <description>Net CDP MRR Attributed to Agency in Rolling 12mo! The amount of MRR from CDP deals sourced by this agency.</description>
    <label>CDP MRR Attributed to Partner Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>