force-app/main/default/objects/Account/fields/CDP_Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>CDP_Open_Opps__c</fullName>
    <description>Sums up Open Opps related to CDP Opportunities</description>
    <inlineHelpText>Sums up Open Opps related to CDP Opportunities</inlineHelpText>
    <label>CDP Open Opps</label>
    <summaryFilterItems>
        <field>Opportunity.Concatenated_Opportunity_Product_Family__c</field>
        <operation>contains</operation>
        <value>CDP</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost, Closed Won - Needs Review, &lt;NEEDS RESOLUTION&gt;</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>