force-app/main/default/objects/Account/fields/CDP_Output_Percent__c.field-meta.xml
<CustomField>
    <fullName>CDP_Output_Percent__c</fullName>
    <description>SFDC 3974</description>
    <formula>Klaviyo_Product_Usage__r.CDP_Output_Percent__c</formula>
    <inlineHelpText>CDP Output Percent from the Klaviyo Product Usage</inlineHelpText>
    <label>CDP Output Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>