force-app/main/default/objects/Account/fields/CDP_Provider__c.field-meta.xml
<CustomField>
    <fullName>CDP_Provider__c</fullName>
    <label>CDP Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bloomreach</fullName>
            </value>
            <value>
                <fullName>Lexer</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Segment</fullName>
            </value>
            <value>
                <fullName>Tealium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>