force-app/main/default/objects/Account/fields/CG_Pilot__c.field-meta.xml
<CustomField>
    <fullName>CG_Pilot__c</fullName>
    <description>SFDC-5872 Indicates that this customer is part of a CG pilot program where reps will get credit for all related deals</description>
    <label>CG Pilot</label>
    <type>Date</type>
</CustomField>