force-app/main/default/objects/Account/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the Channel Manager assigned to this Referral Partner</inlineHelpText>
    <label>Partner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>