force-app/main/default/objects/Account/fields/Charm_Brand_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Charm_Brand_Keywords__c</fullName>
    <label>Charm Brand Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>