force-app/main/default/objects/Account/fields/Charm_Country__c.field-meta.xml
<CustomField>
    <fullName>Charm_Country__c</fullName>
    <description>Best guess at the country in which the brand is mainly operation / has their HQ.</description>
    <inlineHelpText>Best guess at the country in which the brand is mainly operation / has their HQ.</inlineHelpText>
    <label>Charm Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>