force-app/main/default/objects/Account/fields/Charm_Ecommerce_Platform__c.field-meta.xml
<CustomField>
    <fullName>Charm_Ecommerce_Platform__c</fullName>
    <description>On which platform (if any) their store is hosted</description>
    <inlineHelpText>On which platform (if any) their store is hosted</inlineHelpText>
    <label>Charm Ecommerce Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>