force-app/main/default/objects/Account/fields/Charm_Email_Marketing_Tech__c.field-meta.xml
<CustomField>
    <fullName>Charm_Email_Marketing_Tech__c</fullName>
    <description>All technologies detected on site which relate to email marketing</description>
    <inlineHelpText>All technologies detected on site which relate to email marketing</inlineHelpText>
    <label>Charm Email Marketing Tech</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>