force-app/main/default/objects/Account/fields/Charm_Enriched_for_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Charm_Enriched_for_Segmentation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFDC-3627 Indicates Charm Enrichment has done &amp; its ready for segmentation sync</description>
    <label>Charm Enriched for Segmentation</label>
    <type>Checkbox</type>
</CustomField>