force-app/main/default/objects/Account/fields/Charm_Facebook_Category__c.field-meta.xml
<CustomField>
    <fullName>Charm_Facebook_Category__c</fullName>
    <label>Charm Facebook Category</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>