force-app/main/default/objects/Account/fields/Charm_Num_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Charm_Num_of_Employees__c</fullName>
    <description>Number of employees on LinkedIn</description>
    <inlineHelpText>Number of employees on LinkedIn</inlineHelpText>
    <label>Charm # of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>