force-app/main/default/objects/Account/fields/Charm_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Charm_Revenue__c</fullName>
    <description>Guess at brand&apos;s revenue</description>
    <inlineHelpText>Guess at brand&apos;s revenue</inlineHelpText>
    <label>Charm Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>