force-app/main/default/objects/Account/fields/Charm_Revenue_at_Last_Owner_Change__c.field-meta.xml
<CustomField>
    <fullName>Charm_Revenue_at_Last_Owner_Change__c</fullName>
    <description>SFDC-243 Stamp of the Charm Revenue field that is populated by the Account: Before Save whenever the Owner is changed</description>
    <label>Charm Revenue at Last Owner Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>