force-app/main/default/objects/Account/fields/Charm_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Charm_State_Province__c</fullName>
    <description>Brand HQ State/province</description>
    <label>Charm State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>