force-app/main/default/objects/Account/fields/Charm_Technology__c.field-meta.xml
<CustomField>
    <fullName>Charm_Technology__c</fullName>
    <description>All techs-uid found on their site</description>
    <inlineHelpText>All techs-uid found on their site</inlineHelpText>
    <label>Charm Technology</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>