force-app/main/default/objects/Account/fields/Charm_Website_Description__c.field-meta.xml
<CustomField>
    <fullName>Charm_Website_Description__c</fullName>
    <label>Charm Website Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>