force-app/main/default/objects/Account/fields/Child_Store_Has_Paying_Parent__c.field-meta.xml
<CustomField>
    <fullName>Child_Store_Has_Paying_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Store Has Paying Parent</label>
    <type>Checkbox</type>
</CustomField>