force-app/main/default/objects/Account/fields/CleanWebsite_Stamp__c.field-meta.xml
<CustomField>
    <fullName>CleanWebsite_Stamp__c</fullName>
    <description>Stamped version of the Clean Website field so that we can utilize it in Matching and Duplicate Rules. TP88781</description>
    <inlineHelpText>Stamped version of the Clean Website field so that we can utilize it in Matching and Duplicate Rules.</inlineHelpText>
    <label>CleanWebsite Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>