force-app/main/default/objects/Account/fields/Clearbit_City__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_City__c</fullName>
    <description>The city of the company headquarters based on their location.</description>
    <inlineHelpText>The city of the company headquarters based on their location.</inlineHelpText>
    <label>Clearbit City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>