force-app/main/default/objects/Account/fields/Clearbit_Country__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Country__c</fullName>
    <description>The country of the company headquarters based on their location.</description>
    <inlineHelpText>The country of the company headquarters based on their location.</inlineHelpText>
    <label>Clearbit Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>