force-app/main/default/objects/Account/fields/Clearbit_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Country_Code__c</fullName>
    <description>The country code of the company headquarters based on their location.</description>
    <inlineHelpText>The country code of the company headquarters based on their location.</inlineHelpText>
    <label>Clearbit Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>