force-app/main/default/objects/Account/fields/Clearbit_Description__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Description__c</fullName>
    <description>The company&apos;s description.</description>
    <inlineHelpText>The company&apos;s description.</inlineHelpText>
    <label>Clearbit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>