force-app/main/default/objects/Account/fields/Clearbit_Domain__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Domain__c</fullName>
    <description>The company&apos;s website.</description>
    <inlineHelpText>The company&apos;s website.</inlineHelpText>
    <label>Clearbit Domain</label>
    <type>Url</type>
</CustomField>