force-app/main/default/objects/Account/fields/Clearbit_Employees_Range__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Employees_Range__c</fullName>
    <description>The number of employees that work at the company by range.</description>
    <inlineHelpText>The number of employees that work at the company by range.</inlineHelpText>
    <label>Clearbit Employees Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>