force-app/main/default/objects/Account/fields/Clearbit_Enriched_for_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Enriched_for_Segmentation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFDC-3627 Indicates Clearbit Enrichment has done &amp; its ready for segmentation sync</description>
    <label>Clearbit Enriched for Segmentation</label>
    <type>Checkbox</type>
</CustomField>