force-app/main/default/objects/Account/fields/Clearbit_Estimated_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Estimated_Annual_Revenue__c</fullName>
    <description>An estimate of the company&apos;s annual revenue by range.</description>
    <inlineHelpText>An estimate of the company&apos;s annual revenue by range.</inlineHelpText>
    <label>Clearbit Estimated Annual Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>