force-app/main/default/objects/Account/fields/Clearbit_Facebook_Likes__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Facebook_Likes__c</fullName>
    <description>The number of likes the company has on their Facebook page.</description>
    <inlineHelpText>The number of likes the company has on their Facebook page.</inlineHelpText>
    <label>Clearbit Facebook Likes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>