force-app/main/default/objects/Account/fields/Clearbit_Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Fiscal_Year_End__c</fullName>
    <description>The month that the company&apos;s fiscal year ends (listed as integer 1-12).</description>
    <inlineHelpText>The month that the company&apos;s fiscal year ends (listed as integer 1-12).</inlineHelpText>
    <label>Clearbit Fiscal Year End</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>