force-app/main/default/objects/Account/fields/Clearbit_Founded_Year__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Founded_Year__c</fullName>
    <description>The year the company was founded.</description>
    <inlineHelpText>The year the company was founded.</inlineHelpText>
    <label>Clearbit Founded Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>