force-app/main/default/objects/Account/fields/Clearbit_Industry__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Industry__c</fullName>
    <description>Clearbit enrichment field, takes value directly from Clearbit.</description>
    <label>Clearbit Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>