force-app/main/default/objects/Account/fields/Clearbit_Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Industry_Group__c</fullName>
    <description>The second tier of company industry classification.</description>
    <inlineHelpText>The second tier of company industry classification.</inlineHelpText>
    <label>Clearbit Industry Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>