force-app/main/default/objects/Account/fields/Clearbit_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Legal_Name__c</fullName>
    <description>The company&apos;s legal name.</description>
    <inlineHelpText>The company&apos;s legal name.</inlineHelpText>
    <label>Clearbit Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>