force-app/main/default/objects/Account/fields/Clearbit_Location__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Location__c</fullName>
    <description>The company headquarters address.</description>
    <inlineHelpText>The company headquarters address.</inlineHelpText>
    <label>Clearbit Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>