force-app/main/default/objects/Account/fields/Clearbit_Market_Cap__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Market_Cap__c</fullName>
    <description>The company&apos;s total market capitalization. This attribute is available for public companies only.</description>
    <label>Clearbit Market Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>