force-app/main/default/objects/Account/fields/Clearbit_Modified__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Modified__c</fullName>
    <description>Timestamp indicating when the company&apos;s record was last updated in Clearbit&apos;s database. A record update may or may not include new information about the company.</description>
    <inlineHelpText>Timestamp indicating when the company&apos;s record was last updated in Clearbit&apos;s database. A record update may or may not include new information about the company.</inlineHelpText>
    <label>Clearbit Modified</label>
    <type>DateTime</type>
</CustomField>