force-app/main/default/objects/Account/fields/Clearbit_Money_Raised__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Money_Raised__c</fullName>
    <description>The total amount of funding raised by the company.</description>
    <inlineHelpText>The total amount of funding raised by the company.</inlineHelpText>
    <label>Clearbit Money Raised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>