force-app/main/default/objects/Account/fields/Clearbit_NAICS_2_Digit_Code__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_NAICS_2_Digit_Code__c</fullName>
    <description>The two digit company North American Industry Classification System (NAICS) code.</description>
    <inlineHelpText>The two digit company North American Industry Classification System (NAICS) code.</inlineHelpText>
    <label>Clearbit NAICS 2 Digit Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>