force-app/main/default/objects/Account/fields/Clearbit_NAICS_6_Digit_Codes__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_NAICS_6_Digit_Codes__c</fullName>
    <description>A list of primary and secondary six digit company North American Industry Classification System (NAICS) codes.</description>
    <inlineHelpText>A list of primary and secondary six digit company North American Industry Classification System (NAICS) codes.</inlineHelpText>
    <label>Clearbit NAICS 6 Digit Codes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>