force-app/main/default/objects/Account/fields/Clearbit_Name__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Name__c</fullName>
    <label>Clearbit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>