force-app/main/default/objects/Account/fields/Clearbit_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_of_Employees__c</fullName>
    <description># of Employees from Clearbit enrichment vendor.</description>
    <label>Clearbit # of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>