force-app/main/default/objects/Account/fields/Clearbit_Phone_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Phone_Numbers__c</fullName>
    <description>A list of phone numbers listed on the company&apos;s website.</description>
    <inlineHelpText>A list of phone numbers listed on the company&apos;s website.</inlineHelpText>
    <label>Clearbit Phone Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>