force-app/main/default/objects/Account/fields/Clearbit_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Postal_Code__c</fullName>
    <description>The postal code of the company headquarters based on their location.</description>
    <inlineHelpText>The postal code of the company headquarters based on their location.</inlineHelpText>
    <label>Clearbit Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>