force-app/main/default/objects/Account/fields/Clearbit_Ready__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clearbit Ready</label>
    <type>Checkbox</type>
</CustomField>