force-app/main/default/objects/Account/fields/Clearbit_Sector__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Sector__c</fullName>
    <description>The broadest tier of company industry classification.</description>
    <inlineHelpText>The broadest tier of company industry classification.</inlineHelpText>
    <label>Clearbit Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>