force-app/main/default/objects/Account/fields/Clearbit_SIC_2_Digit_Code__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_SIC_2_Digit_Code__c</fullName>
    <description>The two digit company Standard Industry Classification (SIC) code.</description>
    <inlineHelpText>The two digit company Standard Industry Classification (SIC) code.</inlineHelpText>
    <label>Clearbit SIC 2 Digit Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>