force-app/main/default/objects/Account/fields/Clearbit_SIC_4_Digit_Codes__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_SIC_4_Digit_Codes__c</fullName>
    <description>A list of primary and secondary four digit company Standard Industry Classification (SIC) codes.</description>
    <inlineHelpText>A list of primary and secondary four digit company Standard Industry Classification (SIC) codes.</inlineHelpText>
    <label>Clearbit SIC 4 Digit Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>