force-app/main/default/objects/Account/fields/Clearbit_State__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_State__c</fullName>
    <description>The state of the company headquarters based on their location.</description>
    <inlineHelpText>The state of the company headquarters based on their location.</inlineHelpText>
    <label>Clearbit State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>