force-app/main/default/objects/Account/fields/Clearbit_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_State_Code__c</fullName>
    <description>The state code of the company headquarters based on their location.</description>
    <inlineHelpText>The state code of the company headquarters based on their location.</inlineHelpText>
    <label>Clearbit State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>