force-app/main/default/objects/Account/fields/Clearbit_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Sub_Industry__c</fullName>
    <description>The most specific tier of company industry classification.</description>
    <inlineHelpText>The most specific tier of company industry classification.</inlineHelpText>
    <label>Clearbit Sub Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>