force-app/main/default/objects/Account/fields/Clearbit_Tags__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Tags__c</fullName>
    <description>A list of company vertical descriptors. Typically more granular than industry classification.</description>
    <inlineHelpText>A list of company vertical descriptors. Typically more granular than industry classification.</inlineHelpText>
    <label>Clearbit Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>