force-app/main/default/objects/Account/fields/Clearbit_Tech__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Tech__c</fullName>
    <description>A list of technologies used by the company.</description>
    <inlineHelpText>A list of technologies used by the company.</inlineHelpText>
    <label>Clearbit Tech</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>