force-app/main/default/objects/Account/fields/Clearbit_Tech_Categories__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Tech_Categories__c</fullName>
    <description>A list of technology categories used by the company.</description>
    <inlineHelpText>A list of technology categories used by the company.</inlineHelpText>
    <label>Clearbit Tech Categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>