force-app/main/default/objects/Account/fields/Clearbit_Ticker__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Ticker__c</fullName>
    <description>The company&apos;s stock symbol. This attribute is available for public companies only.</description>
    <inlineHelpText>The company&apos;s stock symbol. This attribute is available for public companies only.</inlineHelpText>
    <label>Clearbit Ticker</label>
    <length>4</length>
    <type>Text</type>
</CustomField>