force-app/main/default/objects/Account/fields/Clearbit_Traffic_Rank__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Traffic_Rank__c</fullName>
    <description>The company&apos;s standing in a global rank of company website traffic as calculated by Clearbit.</description>
    <inlineHelpText>The company&apos;s standing in a global rank of company website traffic as calculated by Clearbit.</inlineHelpText>
    <label>Clearbit Traffic Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>