force-app/main/default/objects/Account/fields/Clearbit_Twitter_Followers__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Twitter_Followers__c</fullName>
    <description>The number of followers the company has on Twitter.</description>
    <inlineHelpText>The number of followers the company has on Twitter.</inlineHelpText>
    <label>Clearbit Twitter Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>