force-app/main/default/objects/Account/fields/Clearbit_Twitter_Site__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Twitter_Site__c</fullName>
    <description>The company&apos;s website as listed on their Twitter profile.</description>
    <inlineHelpText>The company&apos;s website as listed on their Twitter profile.</inlineHelpText>
    <label>Clearbit Twitter Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>