force-app/main/default/objects/Account/fields/Clearbit_Type__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Type__c</fullName>
    <description>The company&apos;s type.</description>
    <inlineHelpText>The company&apos;s type.</inlineHelpText>
    <label>Clearbit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>